# cosmwasm_book_practice

./: Cargo.toml  README.md
.cargo/: config.toml
schema/: first-try.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
